# Aurelia-TUI

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yaml  test.yml
assets/: asciiart_banner.txt  splash.txt
docs/: FEATURE_PLAN.md
scripts/: logo_ascii.rs
src/: app.rs  browse.rs  client.rs  config.rs  lib.rs  main.rs  theme.rs
src/interface/: aurelia.rs  game.rs  game_status.rs  mod.rs
src/ui/: account.rs  achievements.rs  actions.rs  branches.rs  chat.rs  cloud.rs  collections.rs  config.rs  confirm.rs  depots.rs  detail.rs  dlc.rs  engine.rs  friend_add.rs  friends.rs  game_config.rs  help.rs  import.rs  install_picker.rs  inventory.rs  launch.rs  list.rs  market.rs  market_search.rs  mod.rs  move_game.rs  proton.rs  relink.rs  running.rs  status.rs  tabs.rs  versions.rs  wallet.rs  workshop.rs
src/util/: error.rs  event.rs  image.rs  mod.rs  paths.rs  stateful.rs
tests/: actions_view.rs  aurelia_integration.rs  browse_view.rs  friends_chat.rs  market_search_view.rs  theme_render.rs
