[package]
name = "aurelia-tui"
version = "0.1.3"
description = "TUI client for the Aurelia Steam CLI."
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/Drackrath/Aurelia-TUI"
keywords = ["tui", "steam", "aurelia", "gaming"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
pretty-bytes = "0.2.2"
shellexpand = "2.1.0"

serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }

crossterm = { version = "0.25"}
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }

fuzzy-matcher = "0.3.7"

# Render the Steam login QR challenge as terminal blocks on the login page.
qrcode = { version = "0.14", default-features = false }

# Native TLS (schannel on Windows). This deliberately avoids `rustls`, whose
# `ring 0.16.x` dependency fails to C-compile on aarch64-pc-windows-msvc
# (`BN_ULLONG undeclared`). The `schannel` pin below (>= 0.1.27) fixes the
# `slice::from_raw_parts` UB that older schannel hit under rustc's runtime checks.
reqwest = { version = "0.11", features = ["blocking", "json"] }

atty = "0.2"

image = "0.24"

[dependencies.tui-image-rgba-updated]
version = "0.2.2"

# Force a fixed schannel (native-tls's Windows TLS backend) on Windows only;
# 0.1.20 aborted in debug builds during the TLS handshake. schannel is a
# Windows-only crate, so it must not be an unconditional dependency.
[target.'cfg(windows)'.dependencies]
schannel = "0.1.27"
